<resources>
    <string name="app_name">Pacebook</string>
    <string name="create_account">Create New Pacebook Account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_text">Email</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_a_status_update">Write Something here...\nयहाँ कुछ लिखें...</string>
    <string name="create_room">Create\nRoom</string>
    <string name="textview_thi_si_du_y_text_for_request">TextView thi si du,,y text for request TextView thi si TextView thi si TextView thi si du,,y text for request TextView thi si du,,y text for request du,,y text for request du,,y text for request</string>
</resources>