<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".views.loginandsignup.LoginActivity">

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/email_text"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18"/>
    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18"/>
    <Button
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/voilet"
        android:padding="@dimen/dp_8"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"/>
    <TextView
        android:id="@+id/forgettext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_18"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_150"
        android:background="@color/green"
        android:padding="@dimen/dp_8"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressbar1"
        android:visibility="gone"
        android:layout_height="wrap_content"/>


</LinearLayout>