<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.loginandsignup.RegisterActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/sp_18" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/voilet"
        android:padding="@dimen/dp_8"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvAlreadyRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="Already registered?"
        android:textColor="@color/voilet"
        android:textSize="@dimen/sp_18" />

</LinearLayout>